<resources>
    <string name="app_name">COVID Test Calendar Adder</string>
    <string name="app_name_short">Test Calendar</string>
    <string name="preference_file_key">net.quantaly.covidtestcalendaradder.whytheheccaredefaultsharedpreferencesdeprecated</string>
    <string name="preference_calendar_id">the-id-of-the-calendar-that-the-user-picked</string>
    <string name="incoming_number">2819049834</string>
    <string name="match_text">COVID-19 Testing COVID appointment confirmed</string>
    <string name="sample_message">Colorado School of Mines COVID-19 Testing COVID appointment confirmed on February 16 at 01:00 PM at 1922 Jones Road, Golden, CO 80401, USA. Please confirm your phone number by clicking: http://primarybio.com/verify_phone?access_code=CEBEF5DC2C</string>
    <string name="permissions_required">This app requires access to your text messages and calendar in order to function.</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="permissions_granted">All Permissions Granted</string>
    <string name="select_calendar">Select a calendar to add events to:</string>
    <string name="event_title">COVID test</string>
    <string name="event_added_toast">Event added to calendar</string>
    <string name="enter_sweepstakes">Submit tests to the sweepstakes?</string>
    <string name="first_name">First</string>
    <string name="last_name">Last</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone</string>
    <string name="preference_enter_sweepstakes">enter-sweepstakes</string>
    <string name="preference_first_name">first-name</string>
    <string name="preference_last_name">last-name</string>
    <string name="preference_email">email</string>
    <string name="preference_phone_number">phone-number</string>
    <string name="entered_sweepstakes_toast">Entered sweepstakes</string>
    <string name="enter_sweepstakes_error_toast">Failed to enter sweepstakes</string>

    <string-array name="default_calendar_options">
        <item>(None)</item>
    </string-array>
</resources>